--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name="com.example.shohel.khaler_kontho.MainActivity">
+        android:theme="@android:style/Theme.Translucent.NoTitleBar">
+        <activity android:name="com.example.shohel.khaler_kontho.Splash">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +18,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+
+        <activity
+            android:name="com.example.shohel.khaler_kontho.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden" >
+        </activity>
+
+
+
     </application>
 
 </manifest>
