--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.3.+'
     compile 'com.google.android.gms:play-services:8.4.0'
     compile 'com.aapbd.aapbdlib:aapbd-lib:1.0.0'
-
+    compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
 }
