--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,12 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.3.+'
     compile 'com.android.support:cardview-v7:23.3.+'
-    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.android.gms:play-services-places:9.2.0'
     compile 'com.aapbd.aapbdlib:aapbd-lib:1.0.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.google.firebase:firebase-core:9.2.0'
+    compile 'com.google.firebase:firebase-messaging:9.2.0'
 
 }
+apply plugin: 'com.google.gms.google-services'
