--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
+        android:theme="@style/AppTheme"
         android:name="android.support.multidex.MultiDexApplication"
         >
         <activity
@@ -40,7 +41,7 @@
         android:name="com.kalerkantho.MainActivity"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:windowSoftInputMode="stateAlwaysHidden"></activity>
         <activity
             android:name="com.kalerkantho.PhotoGallery"
