--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,6 @@ dependencies {
     compile 'com.daimajia.easing:library:1.0.1@aar'
     compile 'com.daimajia.androidanimations:library:1.1.3@aar'
 
+    compile 'com.google.android.gms:play-services-appindexing:9.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
